@@ -52,6 +52,7 @@ version 0.60:
 	  Buddies" tab (Thanks click81)
 	* Option to log IMs and Chats seperately.  (Thanks Etan
 	  Reisner)
+	* Nice Oscar changes--mostly internal (Thanks Mark Doliner)
 
 version 0.59 (06/24/2002):
 	* Hungarian translation added (Thanks, Sutto Zoltan)
